--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,21 @@
     @apply scroll-smooth;
   }
 
+  .filter-white {
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg)
+      brightness(100%) contrast(100%);
+  }
+
+  .filter-green {
+    filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
+      brightness(119%) contrast(119%);
+  }
+
+  .filter-black {
+    filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%)
+      contrast(100%);
+  }
+
   body {
     @apply bg-white text-dark-200 min-h-screen;
   }
@@ -191,11 +206,14 @@
   }
 
   /* Sidebar & MobileNavigation */
+  .nav-icon-mob {
+    @apply filter-black opacity-100 !important;
+  }
   .nav-icon {
-    @apply w-6 filter invert-0 opacity-100 !important;
+    @apply w-6 filter-white opacity-100 !important;
   }
   .nav-icon-active {
-    @apply invert-0 opacity-100 !important;
+    @apply filter-white opacity-100 !important;
   }
 
   /* =====  STYLE CLASSES */
@@ -356,6 +374,10 @@
 
   .error-toast {
     @apply bg-red !rounded-[10px] !important;
+  }
+
+  .success-toast {
+    @apply bg-green-500 text-white px-4 py-3 rounded-md shadow-md flex items-center gap-2 text-sm font-medium;
   }
 
   /* Header */
