--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,7 @@
   }
 
   .filter-white {
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg)
-      brightness(100%) contrast(100%);
+    filter: brightness(0) invert(1);
   }
 
   .filter-green {
