--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
   }
 
   body {
-    @apply bg-white text-dark-200 min-h-screen;
+    @apply bg-white text-dark-200 min-h-screen overflow-hidden;
   }
 
   /* Remove scrollbar */
